# Clif-Code

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PANEL_LAYOUT.md  PANEL_SYSTEM_REFACTOR.md  README.md  TESTING_PANEL_SYSTEM.md  index.html  openrouter_activity_2026-03-20.csv  package-lock.json  package.json
.clif/: CLIF.md
.github/workflows/: clifcode-release.yml  release.yml
clif-code-tui/: Cargo.toml  README.md
clif-code-tui/npm/@clifcode/cli-darwin-arm64/: package.json
clif-code-tui/npm/@clifcode/cli-darwin-x64/: package.json
clif-code-tui/npm/@clifcode/cli-linux-arm64/: package.json
clif-code-tui/npm/@clifcode/cli-linux-x64/: package.json
clif-code-tui/npm/@clifcode/cli-win32-arm64/: package.json
clif-code-tui/npm/@clifcode/cli-win32-x64/: package.json
clif-code-tui/npm/clifcode/: install.js  package.json
clif-code-tui/scripts/: bump-version.js  bump-version.mjs
clif-code-tui/src/: backend.rs  config.rs  git.rs  main.rs  repomap.rs  session.rs  tools.rs  ui.rs  update.rs
clif-pad-ide/: CHANGELOG.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
clif-pad-ide/scripts/: bump-version.js
clif-pad-ide/src/: App.tsx
clif-pad-ide/src-tauri/: Cargo.toml  tauri.conf.json
clif-pad-ide/src-tauri/capabilities/: default.json
clif-pad-ide/src-tauri/icons/: icon.icns
clif-pad-ide/src-tauri/src/: lib.rs  main.rs  state.rs
clif-pad-ide/src/__mocks__/: tauri-core.ts  tauri-dialog.ts  tauri-event.ts  tauri-webview.ts
clif-pad-ide/src/lib/: agentMessages.ts  fonts.ts  keybindings.ts  lsp.ts  monaco-setup.ts  tauri.ts  terminalThemes.ts  themes.ts  updater.ts  utils.ts
clif-pad-ide/src/stores/: agentStore.ts  classificationStore.ts  fileStore.ts  gitStore.ts  indexStore.ts  (+7 more)
clif-pad-ide/www/: index.html
scripts/: bump-version.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  settings.rs
src/stores/: fileStore.ts  gitStore.ts
www/: index.html
(+133 files in other folders)
