[package]
name = "clifcode"
version = "0.1.0"
edition = "2021"
description = "Open-source AI coding agent for your terminal — tool-calling loop, streaming, sessions, any provider"
license = "MIT"
repository = "https://github.com/DLhugly/Clif-Code"
homepage = "https://clifcode.io"
readme = "README.md"
keywords = ["ai", "coding", "agent", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "clifcode"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
ureq = { version = "2", features = ["json"] }
similar = "2"
crossterm = "0.28"
ctrlc = "3"

[profile.release]
opt-level = 3
lto = true
