[package]
name = "clif"
version = "1.2.0"
edition = "2021"

[lib]
name = "clif_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
notify = "7"
walkdir = "2"
log = "0.4"
env_logger = "0.11"
portable-pty = "0.8"
